force-app/main/default/objects/MT_Sales__c/MT_Sales__c.object-meta.xml
<CustomObject>
    <label>売上</label>
    <nameField>
        <displayFormat>NT-{0000}</displayFormat>
        <label>売上名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>