force-app/main/default/objects/MT_Sales__c/fields/AmountGoal__c.field-meta.xml
<CustomField>
    <fullName>AmountGoal__c</fullName>
    <label>売上計画額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>