force-app/main/default/objects/MT_Sales__c/fields/GrossProfit__c.field-meta.xml
<CustomField>
    <fullName>GrossProfit__c</fullName>
    <label>売上粗利金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>