force-app/main/default/objects/MT_Sales__c/fields/Opportunity_NT__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_NT__c</fullName>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>売上</relationshipLabel>
    <relationshipName>OppNTOpp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>