force-app/main/default/objects/MT_Sales__c/fields/SalesAmount_NT__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount_NT__c</fullName>
    <label>売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>