force-app/main/default/objects/MT_Sales__c/fields/SalesDay_NT__c.field-meta.xml
<CustomField>
    <fullName>SalesDay_NT__c</fullName>
    <label>売上日</label>
    <type>Date</type>
</CustomField>