force-app/main/default/objects/MT_Sales__c/fields/SalesForecastforThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>SalesForecastforThisPeriod__c</fullName>
    <label>今期売上見込額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>