force-app/main/default/objects/MT_Sales__c/recordTypes/RecordType_goal.recordType-meta.xml
<RecordType>
    <fullName>RecordType_goal</fullName>
    <active>true</active>
    <label>計画</label>
</RecordType>