force-app/main/default/objects/MT_Sales__c/recordTypes/RecordType_Prospect.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Prospect</fullName>
    <active>true</active>
    <label>見込</label>
</RecordType>