force-app/main/default/objects/MT_Sales__c/recordTypes/RecordType_results.recordType-meta.xml
<RecordType>
    <fullName>RecordType_results</fullName>
    <active>true</active>
    <label>実績</label>
</RecordType>