force-app/main/default/objects/MT_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesDay_NT__c</columns>
    <columns>SalesAmount_NT__c</columns>
    <columns>Opportunity_NT__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>